--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        document.getElementById("display-array").textContent = array.join(", ");
+    </script>
 </head>
 <body>
     Hi
