--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script>
-        document.getElementById("display-array").textContent = array.join(", ");
-    </script>
 </head>
 <body>
-    Hi
+    <p id="test"></p>
+    <script>
+        let myObjects = window.Telegram.WebApp
+        let abc = JSON.stringify(myObjects);
+        console.log(abc)
+        document.getElementById("test").innerHTML = abc
+    </script>
 </body>
 </html>
