--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <p id="test"></p>
-    <script>
-        let myObjects = window.Telegram.WebApp
-        let abc = JSON.stringify(myObjects);
-        console.log(abc)
-        document.getElementById("test").innerHTML = abc
-    </script>
+    <h3><u>Sub Domain's</u>:</h3>
+    <p>a href="//blog.deekshith.eu.org">blog.deekshith.eu.org</a></p>
+    <p>a href="//error.deekshith.eu.org">error.deekshith.eu.org</a></p>
+    <p>a href="//ftl.deekshith.eu.org">ftl.deekshith.eu.org</a></p>
+    <h3><u>Email's</u>:</h3>
+    <p>a href="mailto:abc@deekshith.eu.org">abc@deekshith.eu.org</a></p>
+    <footer>
+        <p><a href="tg://resolve?domain=DeekshithSH">Telegram</a> | <a href="mailto:shdeekshith@gmail.com?subject = Hi&body = Hello">Gmail</a> | <a href="https://www.instagram.com/deekshith_sh">Instagram</a> | <a href="https://twitter.com/ShDeekshith">Twitter</a> | <a href="//facebook.com/shdeekshith">Facebook</a></p>
+    </footer>
 </body>
 </html>
