--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><a href="//error.deekshith.eu.org">error.deekshith.eu.org</a></p>
     <p><a href="//ftl.deekshith.eu.org">ftl.deekshith.eu.org</a></p>
     <h3><u>Email's</u>:</h3>
-    <p><a href="mailto:abc@deekshith.eu.org">abc@deekshith.eu.org</a></p>
+    <p><a href="mailto:shdeekshith@gmail.com">shdeekshith@gmail.com</a></p>
     <footer>
         <p><a href="tg://resolve?domain=DeekshithSH">Telegram</a> | <a href="mailto:shdeekshith@gmail.com?subject = Hi&body = Hello">Gmail</a> | <a href="https://www.instagram.com/deekshith_sh">Instagram</a> | <a href="https://twitter.com/ShDeekshith">Twitter</a> | <a href="//facebook.com/shdeekshith">Facebook</a></p>
     </footer>
