--- a/index.html
+++ b/index.html
@@ -4,17 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Deekshith's Portfolio</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h3 {
+            color: #3498db;
+            text-decoration: underline;
+        }
+
+        a {
+            color: #2ecc71;
+            text-decoration: none;
+        }
+
+        footer {
+            margin-top: 20px;
+        }
+
+        footer a {
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
-    <h3><u>Sub Domain's</u>:</h3>
+    <h1>Welcome to Deekshith's Portfolio</h1>
+    <h3>Contact Me to Create Bots or Tools using Python:</h3>
+    <h3>Subdomains:</h3>
     <p><a href="//blog.deekshith.eu.org">blog.deekshith.eu.org</a></p>
     <p><a href="//error.deekshith.eu.org">error.deekshith.eu.org</a></p>
     <p><a href="//ftl.deekshith.eu.org">ftl.deekshith.eu.org</a></p>
-    <h3><u>Email's</u>:</h3>
+    <h3>Email:</h3>
     <p><a href="mailto:shdeekshith@gmail.com">shdeekshith@gmail.com</a></p>
     <footer>
-        <p><a href="tg://resolve?domain=DeekshithSH">Telegram</a> | <a href="mailto:shdeekshith@gmail.com?subject = Hi&body = Hello">Gmail</a> | <a href="https://www.instagram.com/deekshith_sh">Instagram</a> | <a href="https://twitter.com/ShDeekshith">Twitter</a> | <a href="//facebook.com/shdeekshith">Facebook</a></p>
+        <p>
+            <a href="tg://resolve?domain=DeekshithSH">Telegram</a> |
+            <a href="mailto:shdeekshith@gmail.com?subject=Hi&body=Hello">Gmail</a> |
+            <a href="https://www.instagram.com/deekshith_sh">Instagram</a> |
+            <a href="https://twitter.com/ShDeekshith">Twitter</a> |
+            <a href="//facebook.com/shdeekshith">Facebook</a>
+        </p>
     </footer>
 </body>
 </html>
