--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deekshith's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
@@ -31,6 +32,7 @@
 
         h1 {
             color: #3498db;
+            font-size: 2.5em;
         }
 
         h3 {
@@ -41,6 +43,11 @@
         a {
             color: #2ecc71;
             text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #27ae60;
         }
 
         footer {
@@ -49,6 +56,8 @@
 
         footer a {
             margin: 0 10px;
+            font-size: 1.2em;
+            color: #2c3e50;
         }
 
         .toggle-btn {
@@ -59,6 +68,12 @@
             position: fixed;
             top: 20px;
             right: 20px;
+            color: #2c3e50;
+            transition: color 0.3s;
+        }
+
+        .toggle-btn:hover {
+            color: #3498db;
         }
     </style>
 </head>
