--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .light-mode {
             background-color: #f5f5f5;
             color: #333;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .dark-mode {
@@ -50,16 +47,6 @@
             color: #27ae60;
         }
 
-        footer {
-            margin-top: 20px;
-        }
-
-        footer a {
-            margin: 0 10px;
-            font-size: 1.2em;
-            color: #2c3e50;
-        }
-
         .toggle-btn {
             background: none;
             border: none;
@@ -75,6 +62,26 @@
         .toggle-btn:hover {
             color: #3498db;
         }
+
+        footer {
+            margin-top: 20px;
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            padding: 10px;
+            text-align: center;
+        }
+
+        footer a {
+            margin: 0 10px;
+            font-size: 1.2em;
+            color: #ecf0f1;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: #3498db;
+        }
     </style>
 </head>
 <body class="light-mode">
@@ -82,7 +89,7 @@
         <i class="fas fa-adjust"></i>
     </button>
     <h1>Welcome to Deekshith's Portfolio</h1>
-    <h3>Contact Me to Create Bots or Tools using Python:</h3>
+    <p>Contact Me to Create Bots or Tools using Python</p>
     <h3>Subdomains:</h3>
     <p><a href="//blog.deekshith.eu.org">blog.deekshith.eu.org</a></p>
     <p><a href="//error.deekshith.eu.org">error.deekshith.eu.org</a></p>
@@ -90,30 +97,3 @@
     <h3>Email:</h3>
     <p><a href="mailto:shdeekshith@gmail.com">shdeekshith@gmail.com</a></p>
     <footer>
-        <p>
-            <a href="tg://resolve?domain=DeekshithSH">Telegram</a> |
-            <a href="mailto:shdeekshith@gmail.com?subject=Hi&body=Hello">Gmail</a> |
-            <a href="https://www.instagram.com/deekshith_sh">Instagram</a> |
-            <a href="https://twitter.com/ShDeekshith">Twitter</a> |
-            <a href="//facebook.com/shdeekshith">Facebook</a>
-        </p>
-    </footer>
-    <script>
-        // Check user's preference and set the mode
-        const currentMode = localStorage.getItem("mode");
-        if (currentMode === "dark") {
-            document.body.classList.add("dark-mode");
-        }
-
-        // Function to toggle between light and dark modes
-        function toggleMode() {
-            const body = document.body;
-            body.classList.toggle("dark-mode");
-
-            // Save the user's preference in localStorage
-            const mode = body.classList.contains("dark-mode") ? "dark" : "light";
-            localStorage.setItem("mode", mode);
-        }
-    </script>
-</body>
-</html>
