--- a/wait.html
+++ b/wait.html
@@ -1,3 +1,3 @@
 <h1>sorry for the inconvenience caused</h1>
-<h1>We Will be Back at 11:45 PM IST</h1>
-<h1>Bot got Flood Wait</h1>
+<h1>We Will be Back in 30 Minutes</h1>
+<h1>For now use Second Download Link [Download(EU)]</h1>
